--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Jimmy Byrd
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Web Developer from Ohio
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars3.githubusercontent.com/u/1490044?v=2&s=460
