--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,14 @@ avatar: https://avatars3.githubusercontent.com/u/1490044?v=2&s=460
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble: 
-  email: 
+  email: jimmy.byrd@outlook.com
   facebook: 
   flickr: 
   github: theangrybyrd
   instagram: 
   linkedin: 
   pinterest: 
-  rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
+  rss: /# just type anything here for a working RSS icon, make sure you set the "url" above!
   twitter: jimmy_byrd
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
 
