--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr: 
   github: theangrybyrd
   instagram: 
-  linkedin: http://lnkd.in/d8sTtCn
+  linkedin: www.linkedin.com/pub/jimmy-byrd/4b/aa6/664/
   pinterest: 
   rss: /# just type anything here for a working RSS icon, make sure you set the "url" above!
   twitter: jimmy_byrd
