--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,7 @@ permalink: /:title/
 
 # The release of Jekyll Now that you're using
 version: v1.0.0
+future: true
 
 # Set the Sass partials directory, as we're using @imports
 sass:
